fill in the resume, add more experience.

--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -74,37 +74,19 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2010.4-12.8}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
+\cventry{2010.4-2014}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
 % \item WIFI子系统维护;
 % \item Bluetooth子系统维护;
-% \item 传感器子系统开发与维护;
+% \item 传感器子系统开发;
 % \item 客户定制系统的开发工作;
 % \item 工厂测试和自动测试软件开发;
 % \item android app 开发;
+% \item Bluetooth BLE 协议开发
 % \end{itemize}
 }
-
-\cventry{2012.8-now}{待业}{}{}{}{}
-
-\section{离职原因}
-
-\cvitem{1.}{新的软件团体缺少工程师的氛围。}
-
-\cvitem{2.}{想从事一些更有意思的工作。}
-
-\cvitem{3.}{想总结一下自己的软件技能。}
-
-\section{2012.8至今的生活}
-\cvitem{1.}{旅游 {\small \href{http://zxsu.tumblr.com/}{\color{blue}{http://zxsu.tumblr.com/}}}}
-
-\cvitem{2.}{读书：文学类若干；软件类-倾向与动态语言学习}
-
-\cvitem{3.}{写代码：代码位置在github -- https://github.com/suzp1984}
-
-\cvitem{4.}{把自己变成emacser}
 
 %\cventry{年 -- 年}{职位}{公司}{城市}{}{说明行1\newline{}说明行2}
 %\subsection{其他}
@@ -117,6 +99,10 @@
 \section{计算机技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
+\cvitem{Languages}{C(熟练), Emacs Lisp(熟练), Bash shell(熟悉), Python(熟悉), Java(熟悉), node.js(了解)}
+\cvitem{GUI programming} {Qt, PyQt(熟悉)}
+%\cvitem{Networking programming} {Twisted, node.js}
+%\cvitem{DataBase programming} {}
 
 \section{开源代码}
 \cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
@@ -157,6 +143,8 @@ Shell脚本做过一个系统烧录工具，shell脚本跑在一个init进程里
 
 \cvitem{6.}{GUI软件测试工具，记录gui事件并能够按照顺序回放事件。开发语言C, 自己独立
 完成。}
+
+\cvitem{7.}{Bluetooth v4.0 Low Energy 协议开发工作，熟悉bluedroid, bluez 协议栈。}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
