refresh my cv and prepare for next job.

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~15012462201}                         % 可选项、如不需要可删除本行
+\mobile{+86~18589090105}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -75,6 +75,8 @@
 \section{Working Experience}
 %\subsection{专业}
 \cventry{2010.4-2014}{Software Engineer}{Topwise Shenzhen}{}{}{As a System engineer of Android %\newline{}
+\cventry{2014.5-now}{Software Engineer}{Iboxpay Shenzhen}{}{}{Android app developer %\newline{}
+
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
@@ -99,19 +101,21 @@
 \section{Programming Skills}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{\small C(expert), Emacs Lisp(proficient), Bash shell(proficient), Python(proficient), Java(prior experience), node.js(posterior experience), C++(posterior experience)}
-\cvitem{GUI programming} {Qt, PyQt(prior experience)}
+\cvitem{Languages}{\small C(expert), Emacs Lisp, Bash shell, Python, Java, node.js}
 \cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
 \cvitem{Editor} {Emacs(expert), Intellij(Java IDE), Qt-Creator(Qt)}
 %\cvitem{Networking programming} {Twisted, node.js}
 %\cvitem{DataBase programming} {}
 
 \section{OpenSource codes}
+\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light_BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
+\cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
+\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
 \cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/genesis}{\color{blue}{genesis}}}{\small a plugin desgined middle ware, implemented the reactor module}
-\cvitem{\href{https://github.com/suzp1984/pyqt5-book-code}{\color{blue}{pyqt5-book-code}}}{\small Porting the source codes of book, Rapid GUI Programming with python and Qt, from PyQt4 to PyQt5}
+
 %\cvitem{C}{\small 工作中主要使用的语言, 对它也最熟悉}
 %\cvitem{java}{\small 开发android工作中主要使用的语言}
 %\cvitem{common lisp}{\small 个人兴趣主要钻研的语言, 使用的是sbcl的实现}
@@ -124,22 +128,21 @@
 %\cvitem{加密技术}{\small 个人爱好}
 
 \section{Projects experience}
-\cvitem{1.}{rebuild the Android build system to fulfill the target of stronger customization, developed by Bash Shell, Python.}
+\cvitem{1.}{Eginx develop}
+\cvitem{2.}{Android App develop}
+\cvitem{3.}{Bluetooth v4.0 Low Energy host Stack development， expert of bluedroid, bluez stack.}
+\cvitem{4.}{rebuild the Android build system to fulfill the target of stronger customization, developed by Bash Shell, Python.}
 
-\cvitem{2.}{Porting and maintance the Wifi and Bluetooth module, and familiar with wpa\_supplicant and bluez stack.}
+\cvitem{5.}{Porting and maintance the Wifi and Bluetooth module, and familiar with wpa\_supplicant and bluez stack.}
 
-\cvitem{3.}{android HAL layer development, mainly C source code, the adapter layers for sensors, GPS.}
+\cvitem{6.}{android HAL layer development, mainly C source code, the adapter layers for sensors, GPS.}
 
-\cvitem{4.}{Kernel configuration customization tools development, developed by C, there are an user client to generate a block of data(firmware), and a kernel part to parser that data block when it startup.}
+\cvitem{7.}{Kernel configuration customization tools development, developed by C, there are an user client to generate a block of data(firmware), and a kernel part to parser that data block when it startup.}
 
-\cvitem{5.}{Factory Test toolkits: \newline{}
+\cvitem{8.}{Factory Test toolkits: \newline{}
    a. factory test tool for ordinary customers, running in native C level. \newline{}
    b. Auto Test Daemon who listening the commands from the UART. 
 }
-
-\cvitem{6.}{GUI APP Stress test tool, record the key event and play the events in sequence.}
-
-\cvitem{7.}{Bluetooth v4.0 Low Energy host Stack development， expert of bluedroid, bluez stack.}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
