--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -39,7 +39,7 @@
 \familyname{振兴}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~15012462201}                         % 可选项、如不需要可删除本行
+\mobile{+86~18589090105}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -74,7 +74,8 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2010.4-2014}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
+\cventry{2010.4-2014.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
+\cventry{2014.5-now}{软件工程师}{深圳盒子支付}{}{}{钱盒客户端研发 %\newline{}
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
@@ -99,12 +100,15 @@
 \section{计算机技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{C(熟练), Emacs Lisp(熟练), Bash shell(熟悉), Python(熟悉), Java(熟悉), node.js(了解)}
-\cvitem{GUI programming} {Qt, PyQt(熟悉)}
+\cvitem{Languages}{C, Emacs Lisp, Python, Java, node.js}
+
 %\cvitem{Networking programming} {Twisted, node.js}
 %\cvitem{DataBase programming} {}
 
 \section{开源代码}
+\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light_BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
+\cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
+\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
 \cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
@@ -121,30 +125,25 @@
 %\cvitem{加密技术}{\small 个人爱好}
 
 \section{工作的业绩及其职责描述}
-\cvitem{1.}{Android 构建工具的开发, 基本自己独立完成，主要是开发有利于
-客户定制的rom. 主要开发语言Bash Shell, Python. 另外，还用
-Shell脚本做过一个系统烧录工具，shell脚本跑在一个init进程里。}
-
-\cvitem{2.}{Wifi 蓝牙 模块的维护, 基本是维护工作, 熟悉wpa\_supplicant, bluz代码。}
-
-\cvitem{3.}{android传感器系统的中间层开发，同我上司共同完成，主要开发语言C。适配
+\cvitem{1.}{Eginx develop}
+\cvitem{2.}{Android App develop}
+\cvitem{3.}{Bluetooth v4.0 Low Energy 可穿戴设备开发。}
+\cvitem{4.}{Wifi 蓝牙 模块的维护, 基本是维护工作, 熟悉wpa\_supplicant, bluz代码。}
+\cvitem{5.}{Android 构建工具的开发.}
+\cvitem{6.}{android传感器系统的中间层开发，同我上司共同完成，主要开发语言C。适配
 的传感器包括重力传感器，磁力传感器，方向传感器，距离传感器和光传感器。另
 外，还负责硬件适配层其它部分的维护工作，包括GPS等}
 
-\cvitem{4.}{客户定制化工具的开发，基本是我独立完成，分为PC机部分和内核
+\cvitem{7.}{客户定制化工具的开发，基本是我独立完成，分为PC机部分和内核
 部分，首先，在PC机根据配置文件生成相应的类似文件系统的块，然
 后，烧到rom里，内核启动后加载并解析想应的配置。}
 
-\cvitem{5.}{工厂测试工具的开发，这部分是我个人最满意的部分，基本都是我独立完成，
+\cvitem{8.}{工厂测试工具的开发，这部分是我个人最满意的部分，基本都是我独立完成，
 主要是C代码，包括两部分：\newline{}
    a. 重写展讯的工厂测试代码使其适配客户定制的环境。\newline{}
    b. 自动测试的Android部分代码。自动测试仪发送测试命令，Android机器
    根据命令做测试，并响应测试结果。}
 
-\cvitem{6.}{GUI软件测试工具，记录gui事件并能够按照顺序回放事件。开发语言C, 自己独立
-完成。}
-
-\cvitem{7.}{Bluetooth v4.0 Low Energy 协议开发工作，熟悉bluedroid, bluez 协议栈。}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
