mutse_style cv update

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -128,7 +128,7 @@
 %\cvitem{加密技术}{\small 个人爱好}
 
 \section{Projects experience}
-\cvitem{1.}{Eginx develop}
+\cvitem{1.}{Nginx develop}
 \cvitem{2.}{Android App develop}
 \cvitem{3.}{Bluetooth v4.0 Low Energy host Stack development， expert of bluedroid, bluez stack.}
 \cvitem{4.}{rebuild the Android build system to fulfill the target of stronger customization, developed by Bash Shell, Python.}
