--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -125,7 +125,7 @@
 %\cvitem{加密技术}{\small 个人爱好}
 
 \section{工作的业绩及其职责描述}
-\cvitem{1.}{Eginx develop}
+\cvitem{1.}{Nginx develop}
 \cvitem{2.}{Android App develop}
 \cvitem{3.}{Bluetooth v4.0 Low Energy 可穿戴设备开发。}
 \cvitem{4.}{Wifi 蓝牙 模块的维护, 基本是维护工作, 熟悉wpa\_supplicant, bluz代码。}
