--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -74,8 +74,9 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2010.4-2014.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
 \cventry{2014.5-now}{软件工程师}{深圳盒子支付}{}{}{钱盒客户端研发 %\newline{}
+}
+\cventry{2010.4-14.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
@@ -106,7 +107,7 @@
 %\cvitem{DataBase programming} {}
 
 \section{开源代码}
-\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light_BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
+\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE - Bluetooth Low Energy Device debug tool for Android.}
 \cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
 \cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
 \cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
