--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -74,9 +74,10 @@
 
 \section{Working Experience}
 %\subsection{专业}
-\cventry{2010.4-2014}{Software Engineer}{Topwise Shenzhen}{}{}{As a System engineer of Android %\newline{}
 \cventry{2014.5-now}{Software Engineer}{Iboxpay Shenzhen}{}{}{Android app developer %\newline{}
+}
 
+\cventry{2010.4-14.4}{Software Engineer}{Topwise Shenzhen}{}{}{As a System engineer of Android %\newline{}
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
@@ -108,7 +109,7 @@
 %\cvitem{DataBase programming} {}
 
 \section{OpenSource codes}
-\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light_BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
+\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
 \cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
 \cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
 \cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
