--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -74,7 +74,7 @@
 
 \section{Working Experience}
 %\subsection{专业}
-\cventry{2014.5-now}{Software Engineer}{Iboxpay Shenzhen}{}{}{Android app developer %\newline{}
+\cventry{2014.5-16.3}{Software Engineer}{Iboxpay Shenzhen}{}{}{Android app developer %\newline{}
 }
 
 \cventry{2010.4-14.4}{Software Engineer}{Topwise Shenzhen}{}{}{As a System engineer of Android %\newline{}
@@ -102,9 +102,8 @@
 \section{Programming Skills}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{\small C(expert), Emacs Lisp, Bash shell, Python, Java, node.js}
+\cvitem{Languages}{\small C, Emacs Lisp, Python, Java, javascript, node.js}
 \cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
-\cvitem{Editor} {Emacs(expert), Intellij(Java IDE), Qt-Creator(Qt)}
 %\cvitem{Networking programming} {Twisted, node.js}
 %\cvitem{DataBase programming} {}
 
@@ -129,22 +128,11 @@
 %\cvitem{加密技术}{\small 个人爱好}
 
 \section{Projects experience}
-\cvitem{1.}{Nginx develop}
-\cvitem{2.}{Android App develop}
+\cvitem{1.}{Virtualization interest, xen/kvm, docker, vagrant}
+\cvitem{2.}{Android App development}
 \cvitem{3.}{Bluetooth v4.0 Low Energy host Stack development， expert of bluedroid, bluez stack.}
-\cvitem{4.}{rebuild the Android build system to fulfill the target of stronger customization, developed by Bash Shell, Python.}
-
-\cvitem{5.}{Porting and maintance the Wifi and Bluetooth module, and familiar with wpa\_supplicant and bluez stack.}
-
-\cvitem{6.}{android HAL layer development, mainly C source code, the adapter layers for sensors, GPS.}
-
-\cvitem{7.}{Kernel configuration customization tools development, developed by C, there are an user client to generate a block of data(firmware), and a kernel part to parser that data block when it startup.}
-
-\cvitem{8.}{Factory Test toolkits: \newline{}
-   a. factory test tool for ordinary customers, running in native C level. \newline{}
-   b. Auto Test Daemon who listening the commands from the UART. 
-}
-
+\cvitem{4.}{Android System developement}
+\cvitem{5.}{Web front-end framework: bootstrap and polymer; and JS MVC framework: angularJs，reactJs.}
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 3}{XXX, YYY, ZZZ}{类别 6}{XXX, YYY, ZZZ}
