--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -74,7 +74,7 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2014.5-now}{软件工程师}{深圳盒子支付}{}{}{钱盒客户端研发 %\newline{}
+\cventry{2014.5-16.3}{软件工程师}{深圳盒子支付}{}{}{钱盒客户端研发 %\newline{}
 }
 \cventry{2010.4-14.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
 % 工作内容:
@@ -101,7 +101,7 @@
 \section{计算机技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{C, Emacs Lisp, Python, Java, node.js}
+\cvitem{Languages}{C, Emacs Lisp, Python, Java, javascript, node.js}
 
 %\cvitem{Networking programming} {Twisted, node.js}
 %\cvitem{DataBase programming} {}
@@ -125,26 +125,12 @@
 %\cvitem{虚拟机}{\small qemu jvm}
 %\cvitem{加密技术}{\small 个人爱好}
 
-\section{工作的业绩及其职责描述}
-\cvitem{1.}{Nginx develop}
-\cvitem{2.}{Android App develop}
+\section{工作的业绩及其职业技能}
+\cvitem{1.}{虚拟化工作，xen/kvm, docker, vagrant}
+\cvitem{2.}{iboxpay钱盒app重构}
 \cvitem{3.}{Bluetooth v4.0 Low Energy 可穿戴设备开发。}
-\cvitem{4.}{Wifi 蓝牙 模块的维护, 基本是维护工作, 熟悉wpa\_supplicant, bluz代码。}
-\cvitem{5.}{Android 构建工具的开发.}
-\cvitem{6.}{android传感器系统的中间层开发，同我上司共同完成，主要开发语言C。适配
-的传感器包括重力传感器，磁力传感器，方向传感器，距离传感器和光传感器。另
-外，还负责硬件适配层其它部分的维护工作，包括GPS等}
-
-\cvitem{7.}{客户定制化工具的开发，基本是我独立完成，分为PC机部分和内核
-部分，首先，在PC机根据配置文件生成相应的类似文件系统的块，然
-后，烧到rom里，内核启动后加载并解析想应的配置。}
-
-\cvitem{8.}{工厂测试工具的开发，这部分是我个人最满意的部分，基本都是我独立完成，
-主要是C代码，包括两部分：\newline{}
-   a. 重写展讯的工厂测试代码使其适配客户定制的环境。\newline{}
-   b. 自动测试的Android部分代码。自动测试仪发送测试命令，Android机器
-   根据命令做测试，并响应测试结果。}
-
+\cvitem{4.}{Android 系统开发}
+\cvitem{5.}{web前端开发，熟悉常用前端框架，bootstrap, polymer; 以及JS的MVC框架angularJs，reactJs.}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
