--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -74,7 +74,7 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2014.5-16.3}{软件工程师}{深圳盒子支付}{}{}{钱盒客户端研发 %\newline{}
+\cventry{2014.5-16.3}{软件工程师}{深圳盒子支付}{}{}{钱盒Android客户端研发 %\newline{}
 }
 \cventry{2010.4-14.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
 % 工作内容:
@@ -98,6 +98,19 @@
 %\cvitemwithcomment{英语}{四级}{}
 %\cvitemwithcomment{语言 3}{水平}{评价}
 
+\section{工作的业绩及其职业技能}
+\cvitem{1.}{Reactive, Realtime, Hybrid mobile App developement}
+\cvitem{2.}{Android APP 架构: MVP, MVVM}
+\cvitem{3.}{IOS}
+\cvitem{4.}{Bluetooth v4.0 Low Energy}
+\cvitem{5.}{虚拟化工作，xen/kvm, docker, vagrant}
+\cvitem{6.}{python编程能力}
+
+
+\section{期望工作}
+\cvitem{1.}{hybrid mobile 开发工作}
+\cvitem{2.}{期望月薪25K}
+
 \section{计算机技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
@@ -109,11 +122,11 @@
 \section{开源代码}
 \cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE - Bluetooth Low Energy Device debug tool for Android.}
 \cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
-\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
-\cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
+%\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
+%\cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
 \cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
-\cvitem{\href{https://github.com/suzp1984/genesis}{\color{blue}{genesis}}}{\small 一个reactor模型的中间件，插件式设计}
+%\cvitem{\href{https://github.com/suzp1984/genesis}{\color{blue}{genesis}}}{\small 一个reactor模型的中间件，插件式设计}
 %\cvitem{C}{\small 工作中主要使用的语言, 对它也最熟悉}
 %\cvitem{java}{\small 开发android工作中主要使用的语言}
 %\cvitem{common lisp}{\small 个人兴趣主要钻研的语言, 使用的是sbcl的实现}
@@ -125,12 +138,6 @@
 %\cvitem{虚拟机}{\small qemu jvm}
 %\cvitem{加密技术}{\small 个人爱好}
 
-\section{工作的业绩及其职业技能}
-\cvitem{1.}{虚拟化工作，xen/kvm, docker, vagrant}
-\cvitem{2.}{iboxpay钱盒app重构}
-\cvitem{3.}{Bluetooth v4.0 Low Energy 可穿戴设备开发。}
-\cvitem{4.}{Android 系统开发}
-\cvitem{5.}{web前端开发，熟悉常用前端框架，bootstrap, polymer; 以及JS的MVC框架angularJs，reactJs.}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
