--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -74,7 +74,7 @@
 
 \section{Working Experience}
 %\subsection{专业}
-\cventry{2014.4-16.4}{Software Engineer}{Iboxpay Shenzhen}{}{}{%
+\cventry{2014.4-16.4}{Software Engineer}{Iboxpay Co., Ltd. Shenzhen}{}{}{%
 }
 \cvitem{Duty:}{%
 \begin{itemize}
@@ -82,20 +82,20 @@
 \item {\small \emph {Software Engineer at Architecture Team}}
 \end{itemize}
 }
-\cventry{2013.9-14.4}{Software Engineer}{Topwise3g Shenzhen}{}{}{}
+\cventry{2013.9-14.4}{Software Engineer}{Topwise3g Co., Ltd. Shenzhen}{}{}{}
 \cvitem{Duty:}{%
 \begin{itemize}
 \item {\small \emph {Bluetooth Low Energy Engineer}}
 \item {\small \emph {Android framework engineer}}
 \end{itemize}
 }
-\cventry{2012.2-12.8}{Software Engineer}{Topwise Shenzhen}{}{}{%
+\cventry{2012.2-12.8}{Software Engineer}{Topwise Co., Ltd. Shenzhen}{}{}{%
 }
 \cvitem{Duty:}{%
 \begin{itemize}
 \item {\small \emph {Android framework engineer}}
 \end{itemize}}
-\cventry{2010.4-12.1}{Software Engineer}{Topwise3g Shenzhen}{}{}{}
+\cventry{2010.4-12.1}{Software Engineer}{Topwise3g Co., Ltd. Shenzhen}{}{}{}
 \cvitem{Duty:}{%
 \begin{itemize}
 \item {\small \emph {Android framework engineer}}
@@ -114,13 +114,13 @@
 
 \section{Projects experience}
 \subsection{IBoxPay's CashBox Android App Project}
-\cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co. Ltd}{ShenZhen}{}{%
+\cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 redesign and refactor the CashBox App project.\newline{}%
 }
 \cvitem{Description:}{%
 \begin{itemize}
 \item CashBox App is IboxPay's core project, which consists of the mobile client side app, the backend side trading system, and an intelligent terminal hardware. This is what we called the mobile POS, a box hardware must be connected to the mobile side CashBox app, which acts as a middleware between the terminal box and the backend trading system. The customer swipes his bank card in that little portable hardware, then he can pay the bill to the merchants.
-\item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
+\item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels such as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
 \end{itemize}
 }
 
@@ -128,13 +128,13 @@ redesign and refactor the CashBox App project.\newline{}%
 \begin{itemize}
 \item I rewrote the code according to the Object-Oriented Principal, decoupled the code by introduced an isolated android module project which can be reused in another project.
 \item I make the development process sustainable and the code is readable by wrote the software design document, wrote necessary unit-test and also maintenance a coding style document.
-\item The highlighted part of that code is the hardware connection channel part,  I  introduced a Connection interface, all the connection types, including Audio Jack, Bluetooth was just an implementation of that interface, then, when another project works on a new terminal with UART custom connection channel, what it did is just implement a new Connection interface.
+\item The highlighted part of that code is the hardware connection channel part,  I  introduced a Connection interface, all the connection types, including Audio Jack and Bluetooth, were just implementations of that interface, then, when another project works on a new terminal with UART custom connection channel, what it did is just implement a new Connection interface.
 \item I porting the JBIG codec to Java environment by using the JNI method. JBIG codec is an efficient lossless compression algorithm for single color depth space picture.
 \end{itemize}}
 \cvitem{}{}
 
 \subsection{Jobs at Software Architecture Team of IBoxPay}
-\cventry{2015.7-16.3}{Software Developer}{IBoxPay Co. Ltd}{ShenZhen}{}{%
+\cventry{2015.7-16.3}{Software Developer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 }
 \cvitem{Description:}{%
 \begin{itemize}
@@ -152,7 +152,7 @@ redesign and refactor the CashBox App project.\newline{}%
 
 \cvitem{}{}
 \subsection{Bluetooth Low Energy Project}
-\cventry{2013.10-14.3}{Software Developer}{Topwise3g Co. Ltd}{Shenzhen}{}{%
+\cventry{2013.10-14.3}{Software Developer}{Topwise3g Co., Ltd.}{Shenzhen}{}{%
 }
 \cvitem{Description:}{%
 \begin{itemize}
@@ -166,7 +166,7 @@ redesign and refactor the CashBox App project.\newline{}%
 \cvitem{}{}
 
 \subsection{Factory autotest toolkit for SpreadTrum's Android platform}
-\cventry{2012.5-12.7}{Software Developer}{Topwise Co. Ltd}{Shenzhen}{}{%
+\cventry{2012.5-12.7}{Software Developer}{Topwise Co., Ltd.}{Shenzhen}{}{%
 }
 \cvitem{Description:}{%
 \begin{itemize}
@@ -181,7 +181,7 @@ redesign and refactor the CashBox App project.\newline{}%
 \cvitem{}{}
 
 \subsection{Android Framework Development}
-\cventry{2010.5-12.8}{Software Developer}{Topwise3g \& Topwise Co. Ltd}{Shenzhen}{}{}
+\cventry{2010.5-12.8}{Software Developer}{Topwise3g \& Topwise Co., Ltd.}{Shenzhen}{}{}
 \cvitem{Description:}{%
 \begin{itemize}
 \item Android framework and System Developer from version 1.6 to 4.3, My duties include integration Makefile development and HAL layer development.
