--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -106,7 +106,7 @@
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
 \cvitem{Languages}{\small C, Emacs Lisp, Python, Java, Javascript, Shell, \LaTeX{}}
 \cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
-
+\cvitem{Editor}{Emacs}
 
 \section{OpenSource codes}
 \cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
