--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -39,7 +39,7 @@
 \familyname{振兴}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~18589090105}                         % 可选项、如不需要可删除本行
+\mobile{+86~***********}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -74,9 +74,33 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2014.5-16.3}{软件工程师}{深圳盒子支付}{}{}{钱盒Android客户端研发 %\newline{}
+\cventry{2014.4-16.4}{软件工程师}{深圳盒子支付有限公司}{}{}{%
 }
-\cventry{2010.4-14.4}{软件工程师}{深圳鼎智}{}{}{从事Android系统的研发工作 %\newline{}
+\cvitem{职责:}{%
+\begin{itemize}
+\item {\small \emph {android app 工程师}}
+\item {\small \emph {android app 架构}}
+\end{itemize}
+}
+\cventry{2013.9-14.4}{软件工程师}{深圳鼎智时代通讯技术有限公司}{}{}{}
+\cvitem{职责:}{%
+\begin{itemize}
+\item {\small \emph {蓝牙BLE工程师}}
+\item {\small \emph {安卓系统工程师}}
+\end{itemize}
+}
+\cventry{2012.2-12.8}{软件工程师}{深圳鼎智通讯有限公司}{}{}{%
+}
+\cvitem{职责:}{%
+\begin{itemize}
+\item {\small \emph {安卓系统开发}}
+\end{itemize}}
+\cventry{2010.4-12.1}{软件工程师}{深圳鼎智时代通讯技术有限公司}{}{}{}
+\cvitem{职责:}{%
+\begin{itemize}
+\item {\small \emph {Android系统开发}}
+\end{itemize}} %\newline{}
+
 % 工作内容:
 % \begin{itemize}
 % \item android编译环境开发与维护;
@@ -88,7 +112,7 @@
 % \item android app 开发;
 % \item Bluetooth BLE 协议开发
 % \end{itemize}
-}
+
 
 %\cventry{年 -- 年}{职位}{公司}{城市}{}{说明行1\newline{}说明行2}
 %\subsection{其他}
@@ -98,23 +122,12 @@
 %\cvitemwithcomment{英语}{四级}{}
 %\cvitemwithcomment{语言 3}{水平}{评价}
 
-\section{工作的业绩及其职业技能}
-\cvitem{1.}{Reactive, Realtime, Hybrid mobile App developement}
-\cvitem{2.}{Android APP 架构: MVP, MVVM}
-\cvitem{3.}{IOS}
-\cvitem{4.}{Bluetooth v4.0 Low Energy}
-\cvitem{5.}{虚拟化工作，xen/kvm, docker, vagrant}
-\cvitem{6.}{python编程能力}
-
-
-\section{期望工作}
-\cvitem{1.}{hybrid mobile 开发工作}
-\cvitem{2.}{期望月薪25K}
-
 \section{计算机技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{C, Emacs Lisp, Python, Java, javascript, node.js}
+\cvitem{Languages}{\small C, Emacs Lisp, Python, Java, Javascript, Shell, \LaTeX{}}
+\cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
+\cvitem{Editor}{Emacs}
 
 %\cvitem{Networking programming} {Twisted, node.js}
 %\cvitem{DataBase programming} {}
@@ -124,8 +137,8 @@
 \cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
 %\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
 %\cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
-\cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
-\cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
+%\cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
+%\cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
 %\cvitem{\href{https://github.com/suzp1984/genesis}{\color{blue}{genesis}}}{\small 一个reactor模型的中间件，插件式设计}
 %\cvitem{C}{\small 工作中主要使用的语言, 对它也最熟悉}
 %\cvitem{java}{\small 开发android工作中主要使用的语言}
@@ -137,6 +150,81 @@
 %\cvitem{latex}{\small 正式的文档工具}
 %\cvitem{虚拟机}{\small qemu jvm}
 %\cvitem{加密技术}{\small 个人爱好}
+
+\section{项目经历}
+\subsection{盒子支付钱盒项目}
+\cventry{2014.7-15.5}{安卓应用工程师}{盒子支付有限公司}{深圳}{}{%
+钱盒安卓客户端重构 \newline{}%
+}
+\cvitem{项目描述:}{%
+\begin{itemize}
+\item CashBox App is IboxPay's core project, which consists of the mobile client side app, the backend side trading system, and an intelligent terminal hardware. This is what we called the mobile POS, a box hardware must be connected to the mobile side CashBox app, which acts as a middleware between the terminal box and the backend trading system. The customer swipes his bank card in that little portable hardware, then he can pay the bill to the merchants.
+\item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels such as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
+\end{itemize}
+}
+
+\cvitem{项目成绩:}{%
+\begin{itemize}
+\item I rewrote the code according to the Object-Oriented Principal, decoupled the code by introduced an isolated android module project which can be reused in another project.
+\item I make the development process sustainable and the code is readable by wrote the software design document, wrote necessary unit-test and also maintenance a coding style document.
+\item The highlighted part of that code is the hardware connection channel part,  I  introduced a Connection interface, all the connection types, including Audio Jack and Bluetooth, were just implementations of that interface, then, when another project works on a new terminal with UART custom connection channel, what it did is just implement a new Connection interface.
+\item I porting the JBIG codec to Java environment by using the JNI method. JBIG codec is an efficient lossless compression algorithm for single color depth space picture.
+\end{itemize}}
+\cvitem{}{}
+
+\subsection{盒子支付架构组工作}
+\cventry{2015.7-16.3}{Software Developer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
+}
+\cvitem{项目描述:}{%
+\begin{itemize}
+\item Android App Architecture research.
+\item Git and Gitlab Training.
+\item Apache and Nginx journal report analysis.
+\item Nginx Lua module develop(OpenResty).
+\end{itemize}
+}
+\cvitem{项目成绩:}{%
+\begin{itemize}
+\item Abandon the outdated centralized version control system, SVN, use the advanced distributed version control system Git, the company also start to use the popular on-line coding review and authority control web app, Gitlab.
+\end{itemize}
+}
+
+\cvitem{}{}
+\subsection{蓝牙低功耗可穿戴设备项目}
+\cventry{2013.10-14.3}{Software Developer}{Topwise3g Co., Ltd.}{Shenzhen}{}{%
+}
+\cvitem{项目描述:}{%
+\begin{itemize}
+\item Research and analysis Bluetooth Low Energy application at Broadcom's BLE board.
+\end{itemize}}
+\cvitem{项目成绩:}{%
+\begin{itemize}
+\item Open Sourced \href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}} project, which can be used to debug and analysis the peripheral BLE device during development.
+\end{itemize}
+}
+\cvitem{}{}
+
+\subsection{展讯安卓平台工厂自动测试工具}
+\cventry{2012.5-12.7}{Software Developer}{Topwise Co., Ltd.}{Shenzhen}{}{%
+}
+\cvitem{项目描述:}{%
+\begin{itemize}
+\item The factory auto running test toolkit is running in an autotest machine which checks the newly produced PCB board.
+\end{itemize}
+}
+\cvitem{项目成绩:}{%
+\begin{itemize}
+\item check out the faulty PCB board at the early stage in the factory, then promote the rate of qualified PCB board out of the factory.
+\end{itemize}
+}
+\cvitem{}{}
+
+\subsection{安卓系统开发}
+\cventry{2010.5-12.8}{Software Developer}{Topwise3g \& Topwise Co., Ltd.}{Shenzhen}{}{}
+\cvitem{项目描述:}{%
+\begin{itemize}
+\item Android framework and System Developer from version 1.6 to 4.3, My duties include integration Makefile development and HAL layer development.
+\end{itemize}}
 
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
